modificacion y areglo de UserAppController UserPerfilController
